--- a/pom.xml
+++ b/pom.xml
@@ -48,19 +48,6 @@
       <artifactId>webdrivermanager</artifactId>
       <version>5.5.0</version>
     </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>5.10.0</version>
-      <scope>test</scope>
-    </dependency>
 
     <dependency>
       <groupId>org.seleniumhq.webdriver</groupId>
@@ -137,18 +124,13 @@
       <version>5.3.0</version>
       <scope>compile</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
-    <dependency>
-      <groupId>com.github.javafaker</groupId>
-      <artifactId>javafaker</artifactId>
-      <version>1.0.2</version>
-    </dependency>
 
     <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-core</artifactId>
     <version>5.2.13.RELEASE</version>
   </dependency>
+
   <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-context</artifactId>
@@ -191,8 +173,10 @@
           <argLine>
             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
           </argLine>
+          <suiteXmlFiles>
+            <suiteXmlFile>ExecuteWeb.xml</suiteXmlFile>
+          </suiteXmlFiles>
         </configuration>
-
       </plugin>
     </plugins>
   </build>
@@ -218,31 +202,6 @@
         </plugins>
       </build>
     </profile>
-
-    <profile>
-      <id>api</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.1</version>
-            <configuration>
-              <suiteXmlFiles>
-                <suiteXmlFile>ExecuteAPI.xml</suiteXmlFile>
-              </suiteXmlFiles>
-              <argLine>
-                -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-              </argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-
-
-
 
   </profiles>
 </project>
