--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,9 +29,9 @@ jobs:
         cache: maven
     - name: Install Google Chrome 
       run: |
-              chmod +x ./scripts/InstallChrome.sh
-
-                          ./scripts/InstallChrome.sh    
+            sudo apt install wget
+            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+            sudo dpkg -i google-chrome-stable_current_amd64.deb                       
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
