--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,12 @@ jobs:
             sudo apt install wget
             wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
             sudo dpkg -i google-chrome-stable_current_amd64.deb                       
+    - name: Install Chrome Webdriver
+      run: |
+            wget -q -O $APP_DIR/chromedriver_$CHROME_DRIVER_VERSION_linux64.zip https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip
+            unzip $APP_DIR/chromedriver_$CHROME_DRIVER_VERSION_linux64.zip -d /usr/bin/
+            chmod +x /usr/bin/chromedriver
+            rm -rf $APP_DIR/chromedriver_$CHROME_DRIVER_VERSION_linux64.zip
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
