--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,27 +6,43 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Selenium Java Test
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - main
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v2
       with:
+        distribution: 'adopt'
         java-version: '11'
-        distribution: 'temurin'
-        cache: maven                    
+
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B clean test
+
+    - name: Upload Allure report
+      if: ${{ always() }}
+      run: |
+        allure generate -c -o allure-results
+        echo "Allure report generated"
+
+    - name: Publish Allure report
+      if: ${{ always() }}
+      uses: actions/upload-artifact@v2
+      with:
+        name: allure-report
+        path: allure-report
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
